Revert "Try: Build from path"
This reverts commit 0d42159e6a4e104ebafbe8eb5f09c1cb82e9fd4e.

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -11,7 +11,7 @@ cargo-fuzz = true
 [dependencies]
 honggfuzz = "0.5.55"
 tree-sitter = "0.20"
-tree-sitter-cpp = { path = ".." } # "*"
+tree-sitter-cpp = "*"
 
 # Prevent this from interfering with workspaces
 [workspace]
